# ai_compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  bench_mark.sh  cmake_install.cmake  out  out.c  temp  temp.c
include/codegen/: add_emitter.hpp  add_relu_emitter.hpp  codegen.hpp  conv_emitter.hpp  emitter.hpp  fully_connected_emitter.hpp  matmul_emitter.hpp  maxpool_emitter.hpp  relu_emitter.hpp  reshape_emitter.hpp  sub_emitter.hpp
include/ir/: graph.h  graph.hpp  graph_builder.hpp  tensor.h  tensor.hpp
include/ops/: add.hpp  div.hpp  element.h  element.hpp  mat_mul.hpp  max_pooling.hpp  mult.hpp  operation.hpp  relu.hpp  sub.hpp
include/optimizer/: optimizer.hpp  quantize.hpp
include/utils/: algorithms.hpp  broadcaster.hpp  debug.hpp  json_parser.hpp  logger.hpp  parser.hpp
output/: compiled_model.c  compiled_model.h  opt_results.txt  results.txt
src/: main.cpp
src/codegen/: add_emitter.cpp  add_relu_emitter.cpp  codegen.cpp  conv_emitter.cpp  emitter.cpp  fully_connected_emitter.cpp  matmul_emitter.cpp  maxpool_emitter.cpp  relu_emitter.cpp  reshape_emitter.cpp  sub_emitter.cpp
src/ir/: graph.cpp  graph_builder.cpp  tensor.cpp
src/ops/: add.cpp  div.cpp  element.cpp  mat_mul.cpp  max_pooling.cpp  mult.cpp  operation.cpp  relu.cpp  sub.cpp
src/optimizer/: optimizer.cpp  quantize.cpp
src/utils/: algorithms.cpp  broadcaster.cpp  debug.cpp  interpret_results.py  json_parser.cpp  logger.cpp  onnx_parser.py  preprocess_input.py  small_model_create.py
templates/: complex_fusion.json  example.json  fusion_test.json
tests/ir/: graph_builder_test.cpp
tests/ops/: element_tests.cpp
